--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/paths" />
         </provider>
+        <service android:name=".services.AlbumService"
+            android:configChanges="keyboardHidden|orientation"/>
 </application>
 
 </manifest>
