--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,8 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-viewpager2 = { group = "androidx.viewpager2", name = "viewpager2", version.ref = "viewpager2" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+mapsforge = { group = "org.mapsforge", name = "mapsforge-map-android", version = "0.23.0" }
+caverock = { group = "com.caverock", name = "androidsvg", version = "1.4" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
